# Algorithms-Autumn-2022

anashkin_i_a/: 0136a.cpp  0136b.cpp  0485a.cpp  0879b.cpp  0886b.cpp  0915a.cpp  0935b.cpp  0967b.cpp  1017a.cpp  1165B.cpp  1501a.cpp  1512b.cpp  1559a.cpp  1585a.cpp  1649a.cpp  1671a.cpp  1678a.cpp  1690d.cpp  1692c.cpp  1701a.cpp  1734b.cpp  bin  bpm_22_2_1.cpp  bpm_22_2_2.cpp  bpm_22_2_3.cpp  hw-05-01.cpp  hw-05-02.cpp  hw-05-03.cpp
anashkin_i_a/RationalNumbers/: CMakeLists.txt
anashkin_i_a/RationalNumbers/lib/: CMakeLists.txt  Rational.cpp  Rational.hpp
anashkin_i_a/RationalNumbers/test/: CMakeLists.txt  test.cpp  test.hpp
anashkin_i_a/Rdec2d/: CMakeLists.txt  main.cpp  r2d_doctest.cpp
anashkin_i_a/Rdec2d/data/: input.txt  output.txt  script_for_vis.py
anashkin_i_a/Rdec2d/r2d/: CMakeLists.txt  Rdec2d.hpp
anashkin_i_a/Rdec2d/src/: Rdec2d.cpp  Rdec2d.hpp  main.cpp
